Fix XsltEditor spacing

--- a/architect-html/src/components/editors/xsltEditor/XsltEditor.module.scss
+++ b/architect-html/src/components/editors/xsltEditor/XsltEditor.module.scss
@@ -23,7 +23,6 @@ along with ORIGAM. If not, see <http://www.gnu.org/licenses/>.
 
   .propertiesBox {
     width: 100%;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    margin: 1rem;
   }
 }
